--- a/skos-ap-eu/doc/skos-ap-eu.dita
+++ b/skos-ap-eu/doc/skos-ap-eu.dita
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "technicalContent/dtd/reference.dtd">
-<reference id="EA_Model14x12x03x02x00">
+<reference id="EA_Model15x14x32x02x00">
 	<title>skos-ap-eu.xmi</title>
 	<refbody>
 		<section>
 			<title>euvoc:XlNotation</title>
 			<p>A notation is a string of characters used to uniquely identify a concept within a specified context.</p>
 			<p>Like the skosxl:Label class reifies SKOS label statements, XlNotation reifies SKOS notation statements. This class permits, if needed, to maintain the historical view of the values and add additional provenance descriptions. </p>
-			<table frame="all" colsep="1" rowsep="1">
+			<table frame="all" colsep="1" rowsep="1" scale="70">
 				<title>Properties</title>
 				<tgroup cols="4" colsep="1" rowsep="1" outputclass="FormatA">
 					<colspec colnum="1" colname="1" colwidth="22*"/>
@@ -72,7 +72,7 @@
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">dct:type</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">1..1</entry>
 							<entry colname="4">Specify the context where a specified notation is considered unique. </entry>
@@ -84,7 +84,7 @@
 		<section>
 			<title>euvoc:XlNote</title>
 			<p>Like the skosxl:Label class reifies SKOS label statements, XlNote reifies SKOS note statements (i.e. skos:editorialNote, skos:example, skos:historyNote, skos:definition, skos:scopeNote and skos:changeNote). This class permits, if needed, to maintain the historical view of the values and add additional provenance descriptions. </p>
-			<table frame="all" colsep="1" rowsep="1">
+			<table frame="all" colsep="1" rowsep="1" scale="70">
 				<title>Properties</title>
 				<tgroup cols="4" colsep="1" rowsep="1" outputclass="FormatA">
 					<colspec colnum="1" colname="1" colwidth="22*"/>
@@ -143,7 +143,7 @@
 		</section>
 		<section>
 			<title>skos:Collection</title>
-			<table frame="all" colsep="1" rowsep="1">
+			<table frame="all" colsep="1" rowsep="1" scale="70">
 				<title>Properties</title>
 				<tgroup cols="4" colsep="1" rowsep="1" outputclass="FormatA">
 					<colspec colnum="1" colname="1" colwidth="22*"/>
@@ -176,25 +176,25 @@
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:member</entry>
 							<entry colname="2">skos:Collection</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">Collection has member.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:member</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">Collection has member.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skosxl:prefLabel</entry>
 							<entry colname="2">skosxl:Label</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">The preferred lexical label for a resource, in a given language. No two concepts in the same concept scheme may have the same preferred label in a given language. </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:member</entry>
 							<entry colname="2">skos:Collection</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">Collection has member.</entry>
@@ -208,7 +208,7 @@
 			<p>A SKOS concept can be viewed as an idea or notion; a unit of thought. However, what constitutes a unit of thought is subjective, and this definition is meant to be suggestive, rather than restrictive.</p>
 			<p>The notion of a SKOS concept is useful when describing the conceptual or intellectual structure of a knowledge organization system, and when referring to specific ideas or meanings established within a KOS.</p>
 			<p>Note that, because SKOS is designed to be a vehicle for representing semi-formal KOS, such as thesauri and classification schemes, a certain amount of flexibility has been built in to the formal definition of this class.</p>
-			<table frame="all" colsep="1" rowsep="1">
+			<table frame="all" colsep="1" rowsep="1" scale="70">
 				<title>Properties</title>
 				<tgroup cols="4" colsep="1" rowsep="1" outputclass="FormatA">
 					<colspec colnum="1" colname="1" colwidth="22*"/>
@@ -376,75 +376,75 @@
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:inScheme</entry>
 							<entry colname="2">skos:ConceptScheme</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">A concept scheme in which the concept is included. A concept may be a member of more than one concept scheme.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">euvoc:xlDefinition</entry>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A statement or formal explanation of the meaning of a concept.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:broadMatch</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The properties skos:broadMatch and skos:narrowMatch are used to state a hierarchical mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">euvoc:xlHistoryNote</entry>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A note about the past state/use/meaning of a concept.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:narrowMatch</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The properties skos:broadMatch and skos:narrowMatch are used to state a hierarchical mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:broader</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept that is more general in meaning.
 Broader concepts are typically rendered as parents in a concept hierarchy (tree).</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">euvoc:xlExample</entry>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">An example of the use of a concept.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">dct:isReplacedBy</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource that supplants, displaces, or supersedes the described resource. 
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:exactMatch</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:exactMatch is used to link two concepts, indicating a high degree of confidence that the concepts can be used interchangeably across a wide range of information retrieval applications.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:closeMatch</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:closeMatch is used to link two concepts that are sufficiently similar that they can be used interchangeably in some information retrieval applications.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:relatedMatch</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:relatedMatch is used to state an associative mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:narrower</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept that is less general in meaning.
@@ -452,112 +452,112 @@ Narrower concepts are typically rendered as children in a concept hierarchy (tre
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skosxl:altLabel</entry>
 							<entry colname="2">skosxl:Label</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">An alternative lexical label for a resource. Acronyms, abbreviations, spelling variants, and irregular plural/singular forms may be included among the alternative labels for a concept. </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skosxl:hiddenLabel</entry>
 							<entry colname="2">skosxl:Label</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A lexical label for a resource that should be hidden when generating visual displays of the resource, but should still be accessible to free text search operations. Mis-spelled terms are normally included as hidden labels.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:topConceptOf</entry>
 							<entry colname="2">skos:ConceptScheme</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:hasTopConcept is, by convention, used to link a concept scheme to the SKOS concept(s) which are topmost in the hierarchical relations for that scheme.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skosxl:prefLabel</entry>
 							<entry colname="2">skosxl:Label</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">The preferred lexical label for a resource, in a given language. No two concepts in the same concept scheme may have the same preferred label in a given language. 
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:notation</entry>
 							<entry colname="2">euvoc:XlNotation</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A notation is a string of characters such as "T58.5" or "303.4833" used to uniquely identify a concept within the scope of a given concept scheme or within a specified context.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">dct:replaces</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource that is supplanted, displaced, or superseded by the described resource.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:related</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept with which there is an associative semantic relationship.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">euvoc:xlChangeNote</entry>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A note about a modification to a concept.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">euvoc:xlEditorialNote</entry>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A note for an editor, translator or maintainer of the vocabulary.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">euvoc:xlScopeNote</entry>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A note that helps to clarify the meaning of a concept.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:broadMatch</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The properties skos:broadMatch and skos:narrowMatch are used to state a hierarchical mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:narrowMatch</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The properties skos:broadMatch and skos:narrowMatch are used to state a hierarchical mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:broader</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept that is more general in meaning.
 Broader concepts are typically rendered as parents in a concept hierarchy (tree).</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">dct:isReplacedBy</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource that supplants, displaces, or supersedes the described resource. 
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:exactMatch</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:exactMatch is used to link two concepts, indicating a high degree of confidence that the concepts can be used interchangeably across a wide range of information retrieval applications.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:closeMatch</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:closeMatch is used to link two concepts that are sufficiently similar that they can be used interchangeably in some information retrieval applications.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:relatedMatch</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:relatedMatch is used to state an associative mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:narrower</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept that is less general in meaning.
@@ -565,13 +565,13 @@ Narrower concepts are typically rendered as children in a concept hierarchy (tre
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">dct:replaces</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource that is supplanted, displaced, or superseded by the described resource.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skos:related</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept with which there is an associative semantic relationship.</entry>
@@ -584,7 +584,7 @@ Narrower concepts are typically rendered as children in a concept hierarchy (tre
 			<title>skos:ConceptScheme</title>
 			<p>A SKOS concept scheme can be viewed as an aggregation of one or more SKOS concepts. Semantic relationships (links) between those concepts may also be viewed as part of a concept scheme. This definition is, however, meant to be suggestive rather than restrictive, and there is some flexibility in the formal data model stated below.</p>
 			<p>Thesauri, classification schemes, subject heading lists, taxonomies, 'folksonomies', and other types of controlled vocabulary are all examples of concept schemes. Concept schemes are also embedded in glossaries and terminologies. </p>
-			<table frame="all" colsep="1" rowsep="1">
+			<table frame="all" colsep="1" rowsep="1" scale="70">
 				<title>Properties</title>
 				<tgroup cols="4" colsep="1" rowsep="1" outputclass="FormatA">
 					<colspec colnum="1" colname="1" colwidth="22*"/>
@@ -650,38 +650,38 @@ Narrower concepts are typically rendered as children in a concept hierarchy (tre
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">dct:hasPart</entry>
 							<entry colname="2">skos:ConceptScheme</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4"/>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">euvoc:domain</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..1</entry>
 							<entry colname="4">Indicates the subject of the controlled vocabulary. 
 This property has a similar function as the dct:subject and dcat:theme. </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">dct:isPartOf</entry>
 							<entry colname="2">skos:ConceptScheme</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource in which the described resource is physically or logically included.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">skosxl:prefLabel</entry>
 							<entry colname="2">skosxl:Label</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">The preferred lexical label for a resource, in a given language. No two concepts in the same concept scheme may have the same preferred label in a given language. </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">dct:hasPart</entry>
 							<entry colname="2">skos:ConceptScheme</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4"/>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">dct:isPartOf</entry>
 							<entry colname="2">skos:ConceptScheme</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource in which the described resource is physically or logically included.</entry>
@@ -696,7 +696,7 @@ This property has a similar function as the dct:subject and dcat:theme. </entry>
 			<p>An instance of the class skosxl:Label is a resource and may be named with a URI.</p>
 			<p>An instance of the class skosxl:Label has a single literal form. This literal form is an RDF plain literal (which is a string of UNICODE characters and an optional language tag [<xref scope="external" href="https://www.w3.org/TR/rdf-concepts/">RDF-CONCEPTS</xref>]). The property skosxl:literalForm is used to give the literal form of an skosxl:Label.</p>
 			<p>If two instances of the class skosxl:Label have the same literal form, they are not necessarily the same resource.</p>
-			<table frame="all" colsep="1" rowsep="1">
+			<table frame="all" colsep="1" rowsep="1" scale="70">
 				<title>Properties</title>
 				<tgroup cols="4" colsep="1" rowsep="1" outputclass="FormatA">
 					<colspec colnum="1" colname="1" colwidth="22*"/>
@@ -764,7 +764,9 @@ This property has a similar function as the dct:subject and dcat:theme. </entry>
 							<entry colname="1">lexinfo:animacy</entry>
 							<entry colname="2">rdfs:Resource</entry>
 							<entry colname="3">0..1</entry>
-							<entry colname="4"/>
+							<entry colname="4">
+								<p>The characteristic of a word indicating that in a given discourse community, its referent is considered to be alive or to possess a quality of volition or consciousness.</p>
+							</entry>
 						</row>
 						<row rowsep="1">
 							<entry colname="1">lexinfo:formNumberVariant</entry>
@@ -817,7 +819,7 @@ This property has a similar function as the dct:subject and dcat:theme. </entry>
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1"/>
+							<entry colname="1">dct:type</entry>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..1</entry>
 							<entry colname="4">Specify the context where a specified notation is considered unique. 
